--- a/exeDAW.vcxproj
+++ b/exeDAW.vcxproj
@@ -136,6 +136,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AudioPlayer.cpp" />
+    <ClCompile Include="AudioTrack.cpp" />
     <ClCompile Include="DAWApplication.cpp" />
     <ClCompile Include="DAWImGuiWindow.cpp" />
     <ClCompile Include="DAWTheme.cpp" />
@@ -179,6 +180,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AudioPlayer.h" />
+    <ClInclude Include="AudioTrack.h" />
     <ClInclude Include="DAWApplication.h" />
     <ClInclude Include="DAWImGuiWindow.h" />
     <ClInclude Include="DAWTheme.h" />
@@ -224,6 +226,7 @@
   <ItemGroup>
     <None Include="DEEP_DIVE_ANALYSIS.md" />
     <None Include="GUI_VALIDATION_REPORT.md" />
+    <None Include="IMGUI_INTEGRATION_COMPLETE.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
